fix: some fixes